--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,23 @@
 
     <div class="info-content">
       <h1 class="logo info-logo">DOT GOV GUARDIAN</h1>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p><b>CORKR</b> helps goverment websites plug their security holes. Click on a website location to see it's security rating.</p>
       <br>
       <p>Created by <a href="http://shkspr.mobi/blog/">Terence Eden</a>, <a href="https://twitter.com/M6_D6">Mark Durrant</a>, <a href="https://twitter.com/marcelloseri">Marcello Seri</a>, and <a href="https://twitter.com/orliesaurus">Orlando Kalossakas</a></p>
-      <p>for <a href="http://nationalhackthegovernment.wordpress.com/">National Hack the Goverment 2014</a></p>
+      <p>For <a href="http://nationalhackthegovernment.wordpress.com/">National Hack the Goverment 2014</a></p>
     </div>
   </header>
 
   <div class="item-info">
+    <div class="shield-outer">
+      <div class="shield shield-green"></div>
+    </div>
+    <div class="item-text">
+      <h3 class="url"><a href="">website.url.gov.uk</a></h3>
+      <p class="description">A very short description of the website</p>
+      <span class="rating-label">Security rating:</span>
+      <span class="rating rating-green">GOOD</span>
+    </div>
   </div>
 
   <div id="map"></div>
