--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
     <div class="info-content">
       <h1 class="logo info-logo">DOT GOV GUARDIAN</h1>
-      <p><b>CORKR</b> helps goverment websites plug their security holes. Click on a website location to see it's security rating.</p>
+      <p><b>CORKR</b> helps goverment websites plug their security holes. <br>Click on a website location to see it's security rating.</p>
       <br>
       <p>Created by <a href="http://shkspr.mobi/blog/">Terence Eden</a>, <a href="https://twitter.com/M6_D6">Mark Durrant</a>, <a href="https://twitter.com/marcelloseri">Marcello Seri</a>, and <a href="https://twitter.com/orliesaurus">Orlando Kalossakas</a></p>
       <p>For <a href="http://nationalhackthegovernment.wordpress.com/">National Hack the Goverment 2014</a></p>
@@ -37,6 +37,7 @@
       <p class="description">A very short description of the website</p>
       <span class="rating-label">Security rating:</span>
       <span class="rating rating-green">GOOD</span>
+      <span class="help">Own this website? <a href="">Contact us</a> to help fix these problems.</span>
     </div>
   </div>
 
