--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <h1 class="logo info-logo">DOT GOV GUARDIAN</h1>
       <p><b>CORKR</b> helps goverment websites plug their security holes. <br>Click on a website location to see it's security rating.</p>
       <br>
-      <p>Created by <a href="http://shkspr.mobi/blog/">Terence Eden</a>, <a href="https://twitter.com/M6_D6">Mark Durrant</a>, <a href="https://twitter.com/marcelloseri">Marcello Seri</a>, and <a href="https://twitter.com/orliesaurus">Orlando Kalossakas</a></p>
+      <p>Created by <a href="http://shkspr.mobi/blog/">Terence</a>, <a href="https://twitter.com/M6_D6">Mark</a>, <a href="https://twitter.com/marcelloseri">Marcello</a>, and <a href="https://twitter.com/orliesaurus">Orlando</a></p>
       <p>For <a href="http://nationalhackthegovernment.wordpress.com/">National Hack the Goverment 2014</a></p>
     </div>
   </header>
