--- a/src/index.html
+++ b/src/index.html
@@ -28,15 +28,15 @@
     </div>
   </header>
 
-  <div class="item-info">
+  <div class="item-info green">
     <div class="shield-outer">
-      <div class="shield shield-green"></div>
+      <div class="shield"></div>
     </div>
     <div class="item-text">
       <h3 class="url"><a href="">website.url.gov.uk</a></h3>
       <p class="description">A very short description of the website</p>
       <span class="rating-label">Security rating:</span>
-      <span class="rating rating-green">GOOD</span>
+      <span class="rating"></span>
       <span class="help">Own this website? <a href="">Contact us</a> to help fix these problems.</span>
     </div>
   </div>
