--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     </div>
   </header>
 
-  <div class="item-info green">
+  <div class="item-info red">
     <div class="shield-outer">
       <div class="shield"></div>
     </div>
