--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,13 @@
     </div>
   </header>
 
-  <div class="item-info red">
+  <div class="item-info orange">
     <div class="shield-outer">
       <div class="shield"></div>
     </div>
     <div class="item-text">
-      <h3 class="url"><a href="">website.url.gov.uk</a></h3>
-      <p class="description">A very short description of the website</p>
+      <h3 class="url"><a href="">akeleyparishcouncil.gov.uk</a></h3>
+      <p class="description">Akeley Parish Council</p>
       <span class="rating-label">Security rating:</span>
       <span class="rating"></span>
       <span class="help">Own this website? <a href="">Contact us</a> to help fix these problems.</span>
