Gauges to show stuff

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
   <link rel="stylesheet" href="css/styles.css">
-  <script src="js/vendor/modernizr.min.js"></script> 
+  <script src="js/vendor/modernizr.min.js"></script>
+  <script src="js/gauge.min.js"></script>
 </head>
 <body>
 
@@ -37,6 +38,23 @@
       <p class="description">Akeley Parish Council</p>
       <span class="rating-label">Security rating:</span>
       <span class="rating"></span>
+      <canvas id="gauge" width="150"
+              data-type="canv-gauge"
+              data-title="Bugs"
+              data-min-value="0"
+              data-max-value="20"
+              data-stroke-ticks="true"
+              data-units=""
+              data-value-format="2.0"
+              data-glow="true"
+              data-animation-delay="20"
+              data-animation-duration="3000"
+              data-animation-fn="linear"
+              data-colors-needle="#f00 #00f"
+              data-highlights="0 1 #4f4, 1 6 #ff4, 6 20 #f44"
+              data-value="0"
+              data-onready="Gauge.Collection.get('gauge').setValue(0)"
+            ></canvas>
       <span class="help">Own this website? <a href="">Contact us</a> to help fix these problems.</span>
     </div>
   </div>
