add nhs / gov buttons

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,12 @@
     </div>
   </header>
 
+  <div class="domain-btns">
+    <button class="nhs"></button>
+    <button class="gov"></button>
+  </div>
+
+
   <div class="item-info orange">
     <div class="shield-outer">
       <div class="shield"></div>
@@ -38,6 +44,10 @@
       <span class="rating-label">Security rating:</span>
       <span class="rating"></span>
       <span class="help">Own this website? <a href="">Contact us</a> to help fix these problems.</span>
+    </div>
+
+    <div class="guage">
+      <div class="guage-pointer"></div>
     </div>
   </div>
 
