--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
   <div class="domain-btns">
     <button class="nhs"></button>
-    <button class="gov"></button>
+    <button class="gov active"></button>
   </div>
 
 
